--- a/package.json
+++ b/package.json
@@ -4,13 +4,31 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "hello": "echo hello"
+    "serve:dev": "cross-env mode=dev webpack-dev-server --config ./config/webpack.config.js",
+    "serve:prd": "cross-env mode=dev webpack-dev-server --config ./config/webpack.config.js",
+    "build:dev": "cross-env mode=dev webpack --config ./config/webpack.config.js",
+    "build:prd": "cross-env mode=prd webpack --config ./config/webpack.config.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.17.5",
+    "@babel/plugin-syntax-jsx": "^7.16.7",
+    "@babel/plugin-transform-react-jsx": "^7.17.3",
+    "@babel/preset-env": "^7.16.11",
+    "babel-loader": "^8.2.3",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.3",
+    "css-loader": "^6.6.0",
+    "html-webpack-plugin": "^5.5.0",
+    "style-loader": "^3.3.1",
     "webpack": "^5.69.1",
-    "webpack-cli": "^4.9.2"
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.4"
+  },
+  "dependencies": {
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.0.0",
+    "lodash": "^4.17.21",
+    "react": "^17.0.2"
   }
 }
